parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.System.Shell/content/Views/System/Index.cshtml.pp
@{
    ViewBag.Title = "System";
}
<h2>
    System Information
</h2>
<table class="table table-bordered">
    <tr>
        <th>
            Component
        </th>
        <th>
            Version
        </th>
        <th>
            License
        </th>
        <th>
        </th>
    </tr>
    <tr>
        <td>
            ScaffR.Core
        </td>
        <td>
            1.1.2
        </td>
        <td>
            Open Source
        </td>
        <td>
            More Options
        </td>
    </tr>
    <tr>
        <td>
            ScaffR.Core
        </td>
        <td>
            1.1.2
        </td>
        <td>
            Open Source
        </td>
        <td>
            More Options
        </td>
    </tr>
    <tr>
        <td>
            ScaffR (Configuration)
        </td>
        <td>
            1.1.2
        </td>
        <td>
            Proprietary
        </td>
        <td>
            More Options
        </td>
    </tr>
</table>
<h2>
    Shell Components
</h2>
<table class="table table-bordered">
    <tr>
        <th rowspan="2">
            ScaffR.Membership
        </th>
        <th>
            Version
        </th>
        <th>
            License
        </th>
        <th>
            Health
        </th>
        <th>
            Status
        </th>
        <th rowspan="2">
            <div class="btn-group pull-right">
                <a class="btn dropdown-toggle btn-primary" data-toggle="dropdown" href="#"><i class="icon-cog icon-white">
                </i> More Options <span class="caret"></span></a>
                <ul class="dropdown-menu">
                    <li><a href="#"><i class="icon-wrench"></i> Configuration</a></li>
                    <li><a href="#"><i class="icon-repeat"></i> Event Log</a></li>
                    <li><a href="#"><i class="icon-user"></i> Documentation</a></li>
                    <li><a href="#"><i class="icon-thumbs-up"></i> Feature Request</a></li>
                </ul>
            </div>
        </th>
    </tr>
    <tr>
        <td>
            1.1.2
        </td>
        <td>
            Open Source
        </td>
        <td>
            <span class="badge badge-success">Healthy </span>
        </td>
        <td>
            Active
        </td>
    </tr>
</table>
<h2>
    Core Components
</h2>
<table class="table table-bordered">
    <tr>
        <th>
            Core Component
        </th>
        <th>
            Version
        </th>
        <th>
            License
        </th>
        <th>
        </th>
    </tr>
    <tr>
        <td>
            ScaffR.Membership
        </td>
        <td>
            1.1.2
        </td>
        <td>
            Open Source
        </td>
        <td>
            More Options
        </td>
    </tr>
</table>
